loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:5: error: illegal start of simple pattern
  var=var+1
     ^LoopFor:6: error: '=' expected but '}' found.
}
^LoopFor:9: error: '(' expected but identifier found.
for k <- 0 to var {
    ^