loopfor.LoopFor.scala.code
var pas=0

while (estSurBiscuit()==false) {
  avance()
  var=var+1
}
prendBiscuit()

for k <- 0 to var {
  recule()
}  
poseBiscuit()